[gd_scene load_steps=12 format=3 uid="uid://dl2tulkrya2s1"]

[ext_resource type="Script" path="res://src/title_screen/title_screen.gd" id="1_0l5l8"]
[ext_resource type="Texture2D" uid="uid://bxdxr8nj4rmff" path="res://assets/images/logoOutline.png" id="2_egf8i"]
[ext_resource type="FontFile" uid="uid://dikrxfgf1i6e7" path="res://assets/fonts/kenney_kenney-fonts/Fonts/Kenney Mini Square Mono.ttf" id="2_oilos"]
[ext_resource type="FontFile" uid="uid://c244bgm64ellr" path="res://assets/fonts/kenney_kenney-fonts/Fonts/Kenney Pixel Square.ttf" id="2_pqtbu"]
[ext_resource type="FontFile" uid="uid://2w1dgg4hs4ys" path="res://assets/fonts/kenney_kenney-fonts/Fonts/Kenney Future Narrow.ttf" id="3_bmdui"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yll5n"]

[sub_resource type="LabelSettings" id="LabelSettings_irdd4"]
line_spacing = 0.0
font = ExtResource("2_oilos")
font_size = 11
font_color = Color(0.580392, 0.878431, 0.537255, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ngsab"]
font = ExtResource("2_pqtbu")
font_color = Color(0.580392, 0.878431, 0.537255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_la4qg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6urq"]
bg_color = Color(0.580392, 0.878431, 0.537255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uaqlq"]
bg_color = Color(0, 0, 0, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0l5l8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yll5n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "****************************************************************************************************
********************************&&&**********&BJ7?!~^:...~5*****************************************
****************************#J^     .:J&*G!.               .G*&5~^.  .7#****************************
**************************G:   .....    .    ..::::::^^::.   ^     ..   :&**************************
*************************~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :**************************
************************~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J*************************
***********************?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?*************************
**********************G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G**************************
**********************^  75YY.  #*.  ^^:.  !????JJJYJ:      .^^^   *********************************
**********&**********&  .555Y   *P  .~^^. .?JJJYY?~:   ~&B   ^~~  .*********************************
********5.  .J&******#  .GPPY  .*.  ~~~^  .JYYJ:?P5Y^  ^**.  ^!!   #**&&****************************
*******G   .    :J#***   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~***********&**************
*******!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?*******&^   :5***********
*******   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &***&#&*:      .#*********
*******^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J**G:   .   .:.   *********
********#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?*&~  .JPP7   ~:         .^          :^.  P********
************~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .********
***********7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y*******
**********7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &******
*********P  .???^  .**J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^******
********G   ?JJ!   #*P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &*****
*******P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?*****
******5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P****
*****Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ****
****P  .GBGP^  ?**.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J***
***P  .G#BG~  ~***  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :***
***.  J5YG!  :****5      ~&B  .7!.  !  .BBPPP!  ^*~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#***
***7     .  ^******&B5YG&***:  ^!   *~  !GBG~  :**&.  ..     .:~?:    ~P**?.   ~&*&P:..^G*&PYYG*****
****&BBG!^!G****************G      Y**?   ~.  7*****J:.:!P&&******B5P&******&#&*********************
******************************G?7Y&****&J. .~B******************************************************
****************************************************************************************************"
label_settings = SubResource("LabelSettings_irdd4")
justification_flags = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_egf8i")
stretch_mode = 5

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "by  geomancer  and  comfysoft"
label_settings = SubResource("LabelSettings_ngsab")
horizontal_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Buttons" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_la4qg")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Buttons"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer/Buttons/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.580392, 0.878431, 0.537255, 1)
theme_override_fonts/font = ExtResource("3_bmdui")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_i6urq")
theme_override_styles/hover = SubResource("StyleBoxFlat_uaqlq")
text = "Start Game"

[node name="OptionsButton" type="Button" parent="PanelContainer/VBoxContainer/Buttons/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.580392, 0.878431, 0.537255, 1)
theme_override_fonts/font = ExtResource("3_bmdui")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_i6urq")
theme_override_styles/hover = SubResource("StyleBoxFlat_uaqlq")
disabled = true
text = "Options"

[node name="CreditsButton" type="Button" parent="PanelContainer/VBoxContainer/Buttons/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.580392, 0.878431, 0.537255, 1)
theme_override_fonts/font = ExtResource("3_bmdui")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_i6urq")
theme_override_styles/hover = SubResource("StyleBoxFlat_uaqlq")
disabled = true
text = "Credits"
