extends Control

@onready var start_button := $PanelContainer/VBoxContainer/Buttons/VBoxContainer/StartButton
@onready var options_button := $PanelContainer/VBoxContainer/Buttons/VBoxContainer/OptionsButton
@onready var credits_button := $PanelContainer/VBoxContainer/Buttons/VBoxContainer/CreditsButton
@onready var title_label := $PanelContainer/VBoxContainer/TitleLabel

var delta_tick = 0.0
var timer = 1.0

var logo_strings = [
	"@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&&&@@@@@@@@@@&BJ7?!~^:...~5@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@#J^     .:J&@G!.               .G@&5~^.  .7#@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@G:   .....    .    ..::::::^^::.   ^     ..   :&@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@^  75YY.  #@.  ^^:.  !????JJJYJ:      .^^^   @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@&@@@@@@@@@@&  .555Y   @P  .~^^. .?JJJYY?~:   ~&B   ^~~  .@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@5.  .J&@@@@@@#  .GPPY  .@.  ~~~^  .JYYJ:?P5Y^  ^@@.  ^!!   #@@&&@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@G   .    :J#@@@   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~@@@@@@@@@@@&@@@@@@@@@@@@@@
@@@@@@@!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?@@@@@@@&^   :5@@@@@@@@@@@
@@@@@@@   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &@@@&#&@:      .#@@@@@@@@@
@@@@@@@^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J@@G:   .   .:.   @@@@@@@@@
@@@@@@@@#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?@&~  .JPP7   ~:         .^          :^.  P@@@@@@@@
@@@@@@@@@@@@~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .@@@@@@@@
@@@@@@@@@@@7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y@@@@@@@
@@@@@@@@@@7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &@@@@@@
@@@@@@@@@P  .???^  .@@J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^@@@@@@
@@@@@@@@G   ?JJ!   #@P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &@@@@@
@@@@@@@P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?@@@@@
@@@@@@5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P@@@@
@@@@@Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   @@@@
@@@@P  .GBGP^  ?@@.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J@@@
@@@P  .G#BG~  ~@@@  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :@@@
@@@.  J5YG!  :@@@@5      ~&B  .7!.  !  .BBPPP!  ^@~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#@@@
@@@7     .  ^@@@@@@&B5YG&@@@:  ^!   @~  !GBG~  :@@&.  ..     .:~?:    ~P@@?.   ~&@&P:..^G@&PYYG@@@@@
@@@@&BBG!^!G@@@@@@@@@@@@@@@@G      Y@@?   ~.  7@@@@@J:.:!P&&@@@@@@B5P&@@@@@@&#&@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@G?7Y&@@@@&J. .~B@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@",
	"----------------------------------------------------------------------------------------------------
--------------------------------&&&----------&BJ7?!~^:...~5-----------------------------------------
----------------------------#J^     .:J&-G!.               .G-&5~^.  .7#----------------------------
--------------------------G:   .....    .    ..::::::^^::.   ^     ..   :&--------------------------
-------------------------~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :--------------------------
------------------------~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J-------------------------
-----------------------?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?-------------------------
----------------------G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G--------------------------
----------------------^  75YY.  #-.  ^^:.  !????JJJYJ:      .^^^   ---------------------------------
----------&----------&  .555Y   -P  .~^^. .?JJJYY?~:   ~&B   ^~~  .---------------------------------
--------5.  .J&------#  .GPPY  .-.  ~~~^  .JYYJ:?P5Y^  ^--.  ^!!   #--&&----------------------------
-------G   .    :J#---   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~-----------&--------------
-------!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?-------&^   :5-----------
-------   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &---&#&-:      .#---------
-------^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J--G:   .   .:.   ---------
--------#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?-&~  .JPP7   ~:         .^          :^.  P--------
------------~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .--------
-----------7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y-------
----------7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &------
---------P  .???^  .--J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^------
--------G   ?JJ!   #-P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &-----
-------P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?-----
------5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P----
-----Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ----
----P  .GBGP^  ?--.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J---
---P  .G#BG~  ~---  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :---
---.  J5YG!  :----5      ~&B  .7!.  !  .BBPPP!  ^-~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#---
---7     .  ^------&B5YG&---:  ^!   -~  !GBG~  :--&.  ..     .:~?:    ~P--?.   ~&-&P:..^G-&PYYG-----
----&BBG!^!G----------------G      Y--?   ~.  7-----J:.:!P&&------B5P&------&#&---------------------
------------------------------G?7Y&----&J. .~B------------------------------------------------------
----------------------------------------------------------------------------------------------------",
	"****************************************************************************************************
********************************&&&**********&BJ7?!~^:...~5*****************************************
****************************#J^     .:J&*G!.               .G*&5~^.  .7#****************************
**************************G:   .....    .    ..::::::^^::.   ^     ..   :&**************************
*************************~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :**************************
************************~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J*************************
***********************?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?*************************
**********************G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G**************************
**********************^  75YY.  #*.  ^^:.  !????JJJYJ:      .^^^   *********************************
**********&**********&  .555Y   *P  .~^^. .?JJJYY?~:   ~&B   ^~~  .*********************************
********5.  .J&******#  .GPPY  .*.  ~~~^  .JYYJ:?P5Y^  ^**.  ^!!   #**&&****************************
*******G   .    :J#***   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~***********&**************
*******!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?*******&^   :5***********
*******   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &***&#&*:      .#*********
*******^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J**G:   .   .:.   *********
********#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?*&~  .JPP7   ~:         .^          :^.  P********
************~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .********
***********7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y*******
**********7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &******
*********P  .???^  .**J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^******
********G   ?JJ!   #*P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &*****
*******P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?*****
******5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P****
*****Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ****
****P  .GBGP^  ?**.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J***
***P  .G#BG~  ~***  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :***
***.  J5YG!  :****5      ~&B  .7!.  !  .BBPPP!  ^*~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#***
***7     .  ^******&B5YG&***:  ^!   *~  !GBG~  :**&.  ..     .:~?:    ~P**?.   ~&*&P:..^G*&PYYG*****
****&BBG!^!G****************G      Y**?   ~.  7*****J:.:!P&&******B5P&******&#&*********************
******************************G?7Y&****&J. .~B******************************************************
****************************************************************************************************",
	",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,&&&,,,,,,,,,,&BJ7?!~^:...~5,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,,,,,,#J^     .:J&,G!.               .G,&5~^.  .7#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,,,,G:   .....    .    ..::::::^^::.   ^     ..   :&,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,,,~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,,~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,^  75YY.  #,.  ^^:.  !????JJJYJ:      .^^^   ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,&,,,,,,,,,,&  .555Y   ,P  .~^^. .?JJJYY?~:   ~&B   ^~~  .,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,5.  .J&,,,,,,#  .GPPY  .,.  ~~~^  .JYYJ:?P5Y^  ^,,.  ^!!   #,,&&,,,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,G   .    :J#,,,   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~,,,,,,,,,,,&,,,,,,,,,,,,,,
,,,,,,,!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?,,,,,,,&^   :5,,,,,,,,,,,
,,,,,,,   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &,,,&#&,:      .#,,,,,,,,,
,,,,,,,^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J,,G:   .   .:.   ,,,,,,,,,
,,,,,,,,#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?,&~  .JPP7   ~:         .^          :^.  P,,,,,,,,
,,,,,,,,,,,,~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .,,,,,,,,
,,,,,,,,,,,7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y,,,,,,,
,,,,,,,,,,7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &,,,,,,
,,,,,,,,,P  .???^  .,,J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^,,,,,,
,,,,,,,,G   ?JJ!   #,P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &,,,,,
,,,,,,,P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?,,,,,
,,,,,,5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P,,,,
,,,,,Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ,,,,
,,,,P  .GBGP^  ?,,.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J,,,
,,,P  .G#BG~  ~,,,  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :,,,
,,,.  J5YG!  :,,,,5      ~&B  .7!.  !  .BBPPP!  ^,~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#,,,
,,,7     .  ^,,,,,,&B5YG&,,,:  ^!   ,~  !GBG~  :,,&.  ..     .:~?:    ~P,,?.   ~&,&P:..^G,&PYYG,,,,,
,,,,&BBG!^!G,,,,,,,,,,,,,,,,G      Y,,?   ~.  7,,,,,J:.:!P&&,,,,,,B5P&,,,,,,&#&,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,G?7Y&,,,,&J. .~B,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,",
	"....................................................................................................
................................&&&..........&BJ7?!~^:...~5.........................................
............................#J^     .:J&.G!.               .G.&5~^.  .7#............................
..........................G:   .....    .    ..::::::^^::.   ^     ..   :&..........................
.........................~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :..........................
........................~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J.........................
.......................?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?.........................
......................G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G..........................
......................^  75YY.  #..  ^^:.  !????JJJYJ:      .^^^   .................................
..........&..........&  .555Y   .P  .~^^. .?JJJYY?~:   ~&B   ^~~  ..................................
........5.  .J&......#  .GPPY  ...  ~~~^  .JYYJ:?P5Y^  ^...  ^!!   #..&&............................
.......G   .    :J#...   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~...........&..............
.......!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?.......&^   :5...........
.......   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &...&#&.:      .#.........
.......^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J..G:   .   .:.   .........
........#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?.&~  .JPP7   ~:         .^          :^.  P........
............~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .........
...........7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y.......
..........7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &......
.........P  .???^  ...J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^......
........G   ?JJ!   #.P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &.....
.......P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?.....
......5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P....
.....Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ....
....P  .GBGP^  ?...  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J...
...P  .G#BG~  ~...  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :...
....  J5YG!  :....5      ~&B  .7!.  !  .BBPPP!  ^.~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#...
...7     .  ^......&B5YG&...:  ^!   .~  !GBG~  :..&.  ..     .:~?:    ~P..?.   ~&.&P:..^G.&PYYG.....
....&BBG!^!G................G      Y..?   ~.  7.....J:.:!P&&......B5P&......&#&.....................
..............................G?7Y&....&J. .~B......................................................
....................................................................................................",
	"____________________________________________________________________________________________________
________________________________&&&__________&BJ7?!~^:...~5_________________________________________
____________________________#J^     .:J&_G!.               .G_&5~^.  .7#____________________________
__________________________G:   .....    .    ..::::::^^::.   ^     ..   :&__________________________
_________________________~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :__________________________
________________________~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J_________________________
_______________________?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?_________________________
______________________G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G__________________________
______________________^  75YY.  #_.  ^^:.  !????JJJYJ:      .^^^   _________________________________
__________&__________&  .555Y   _P  .~^^. .?JJJYY?~:   ~&B   ^~~  ._________________________________
________5.  .J&______#  .GPPY  ._.  ~~~^  .JYYJ:?P5Y^  ^__.  ^!!   #__&&____________________________
_______G   .    :J#___   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~___________&______________
_______!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?_______&^   :5___________
_______   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &___&#&_:      .#_________
_______^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J__G:   .   .:.   _________
________#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?_&~  .JPP7   ~:         .^          :^.  P________
____________~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .________
___________7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y_______
__________7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &______
_________P  .???^  .__J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^______
________G   ?JJ!   #_P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &_____
_______P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?_____
______5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P____
_____Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ____
____P  .GBGP^  ?__.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J___
___P  .G#BG~  ~___  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :___
___.  J5YG!  :____5      ~&B  .7!.  !  .BBPPP!  ^_~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#___
___7     .  ^______&B5YG&___:  ^!   _~  !GBG~  :__&.  ..     .:~?:    ~P__?.   ~&_&P:..^G_&PYYG_____
____&BBG!^!G________________G      Y__?   ~.  7_____J:.:!P&&______B5P&______&#&_____________________
______________________________G?7Y&____&J. .~B______________________________________________________
____________________________________________________________________________________________________",
	"^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^&&&^^^^^^^^^^&BJ7?!~^:...~5^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^#J^     .:J&^G!.               .G^&5~^.  .7#^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^G:   .....    .    ..::::::^^::.   ^     ..   :&^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  :^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^  75YY.  #^.  ^^:.  !????JJJYJ:      .^^^   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^&^^^^^^^^^^&  .555Y   ^P  .~^^. .?JJJYY?~:   ~&B   ^~~  .^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^5.  .J&^^^^^^#  .GPPY  .^.  ~~~^  .JYYJ:?P5Y^  ^^^.  ^!!   #^^&&^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^G   .    :J#^^^   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~^^^^^^^^^^^&^^^^^^^^^^^^^^
^^^^^^^!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?^^^^^^^&^   :5^^^^^^^^^^^
^^^^^^^   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &^^^&#&^:      .#^^^^^^^^^
^^^^^^^^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J^^G:   .   .:.   ^^^^^^^^^
^^^^^^^^#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?^&~  .JPP7   ~:         .^          :^.  P^^^^^^^^
^^^^^^^^^^^^~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .^^^^^^^^
^^^^^^^^^^^7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y^^^^^^^
^^^^^^^^^^7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &^^^^^^
^^^^^^^^^P  .???^  .^^J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^^^^^^^
^^^^^^^^G   ?JJ!   #^P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &^^^^^
^^^^^^^P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?^^^^^
^^^^^^5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P^^^^
^^^^^Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ^^^^
^^^^P  .GBGP^  ?^^.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J^^^
^^^P  .G#BG~  ~^^^  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :^^^
^^^.  J5YG!  :^^^^5      ~&B  .7!.  !  .BBPPP!  ^^~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#^^^
^^^7     .  ^^^^^^^&B5YG&^^^:  ^!   ^~  !GBG~  :^^&.  ..     .:~?:    ~P^^?.   ~&^&P:..^G^&PYYG^^^^^
^^^^&BBG!^!G^^^^^^^^^^^^^^^^G      Y^^?   ~.  7^^^^^J:.:!P&&^^^^^^B5P&^^^^^^&#&^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^G?7Y&^^^^&J. .~B^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^",

	"////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////&&&//////////&BJ7?!~^:...~5/////////////////////////////////////////
////////////////////////////#J^     .:J&/G!.               .G/&5~^.  .7#////////////////////////////
//////////////////////////G:   .....    .    ..::::::^^::.   ^     ..   :&//////////////////////////
/////////////////////////~   ^~~:.:::.     .:^^^:.    :^^^^    .::^^~^:  ://////////////////////////
////////////////////////~  :7!!.   .:::.    ^~~~   .  .~~~^   .:^.   :~.  J/////////////////////////
///////////////////////?  :?77.  .  .^::   .!!!~      ~77~   .:^:         ?/////////////////////////
//////////////////////G  .JJJ^  ~&   ^^:.  :777~..:^^7?!.    :^^   B&7::!G//////////////////////////
//////////////////////^  75YY.  #/.  ^^:.  !????JJJYJ:      .^^^   /////////////////////////////////
//////////&//////////&  .555Y   /P  .~^^. .?JJJYY?~:   ~&B   ^~~  ./////////////////////////////////
////////5.  .J&//////#  .GPPY  ./.  ~~~^  .JYYJ:?P5Y^  ^//.  ^!!   #//&&////////////////////////////
///////G   .    :J#///   GGG5  .~  :7~~:  :YY5J  ^5BG?   Y~  :!7^  :!    ~///////////&//////////////
///////!  :~^:..    :7   ?#BG.    .7!!^   .Y55Y    7G#G!      ^7J~   :?^  ?///////&^   :5///////////
///////   ^~~~~^^:.       7GB5^.^7J?!:    .55PJ     .5#B5.     .?55YP#B   &///&#&/:      .#/////////
///////^     .:^^^^::.     .!Y55Y?!^.     ~Y5P!  ^B   ?GBP~      .^Y57.  J//G:   .   .:.   /////////
////////#PJ~.   :^^^::...      ..     7.  ~Y?7:  ?/&~  .JPP7   ~:         .^          :^.  P////////
////////////~  .~~~:.....   .....         .^     .::     :!            ...     ..     :~^  .////////
///////////7  .!!~:        .^^:::.   ...               ..  ...    ......:~~^   ..:.    ~!.  Y///////
//////////7  .777:  :B&7   ~~..^:.   ^^:  :?   :...   .:::::::.  ..:     :!!~  .::^:   .!!   &//////
/////////P  .???^  .//J  .!!. .~^:   ^~:  .   ^^::    :.         .::     ^7!.  .::^~~.  ~?~  ^//////
////////G   ?JJ!   #/P  .?J^  .~^:   ^!~     .~^^    .^.     ^   .:^::^~!!:     .^~.^7~ .JJ.  &/////
///////P  .J5Y7         ?Y!   :!~:   .77.   .~!!:    :~^:^:.     .^^~::7??.     .~~: :??.!5~  ?/////
//////5  .5P5?     .7?7J557^^:~!!:    7J^   7?7~     :!7~~!~^    .~~^  .?YJ.     ^~!   ~Y?55:  P////
/////Y  .PGP5   G^  :~PG5????J77!:    ~YJ  ^J??:     ^7:          ^~!.  .?55:    :!7~   :5PP5   ////
////P  .GBGP^  ?//.  ~GG:     ^7!.    .5P~ JYY~  :.  ~?.          .!7~    JGG~   .!7?.   .YGB7  J///
///P  .G#BG~  ~///  .GG7  :!  ^7!:     !GY:P5Y.  G.  !?77JYPGGPJ  .!77     YBB^   .~77     ?B5  :///
///.  J5YG!  :////5      ~&B  .7!.  !  .BBPPP!  ^/~  ^?JYYJ?7~:    ^^.  ..  7!   .   :   ^     .#///
///7     .  ^//////&B5YG&///:  ^!   /~  !GBG~  ://&.  ..     .:~?:    ~P//?.   ~&/&P:..^G/&PYYG/////
////&BBG!^!G////////////////G      Y//?   ~.  7/////J:.:!P&&//////B5P&//////&#&/////////////////////
//////////////////////////////G?7Y&////&J. .~B//////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////",
]

func _ready():
	start_button.pressed.connect(_on_Button.bind(1))
	options_button.pressed.connect(_on_Button.bind(2))
	credits_button.pressed.connect(_on_Button.bind(3))
	title_label.text = logo_strings.pick_random()

func _on_Button(mode: int):
	match mode:
		1:
			SceneManager.change_scene("game_screen")
		2:
			pass
		3:
			pass
